bug 969504 - avoid using Segoe UI Light or Semibold for U+25B6 due to bad glyph on Win7. r=jdaggett a=sledru